Working on report system
- report files are now deleted along with a report record
- created business\report\base_report::apply_restrictions() method
- added new database\participant::get_valid_uid_list() method
- created directive cnRecrodView::onGroupClick() function
- fixed a bug in directive cnRecordView::transitionOnDelete() function

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -28,7 +28,7 @@
              class="container-fluid bg-info"
              data-toggle="collapse"
              data-target="#inputGroup{{ $index }}"
-             ng-click="group.collapsed = !group.collapsed"
+             ng-click="onGroupClick( group, $index )"
              style="margin-bottom:2px; cursor:pointer;">
           <h4>
             <div class="pull-right">
