--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
           There {{ 1 == session.application.activeUsers ? "is" : "are" }} currently
           {{ session.application.activeUsers }} active user{{ 1 == session.application.activeUsers ? "" : "s" }},
-          {{ session.site.activeUsers }} of which {{ 1 == session.application.activeUsers ? "is" : "are" }}
+          {{ session.site.activeUsers }} of which {{ 1 == session.site.activeUsers ? "is" : "are" }}
           logged into your site.
         </div>
       </div>
