--- a/web/app/participant/history.tpl.html
+++ b/web/app/participant/history.tpl.html
@@ -18,6 +18,14 @@
         to least recent.  You may filter which categories to display by using the buttons below.
       </p>
       <div class="btn-group btn-group-justified">
+        <div class="btn-group">
+          <button class="btn btn-info" ng-click="model.selectAllCategories()">Select All</button>
+        </div>
+        <div class="btn-group">
+          <button class="btn btn-info" ng-click="model.unselectAllCategories()">Unselect All</button>
+        </div>
+      </div>
+      <div class="btn-group btn-group-justified">
         <div ng-repeat="category in historyCategoryArray | filter:{ framework: true }" class="btn-group">
           <button class="btn btn-default"
                   ng-model="category.active"
