--- a/web/app/alternate/history.tpl.html
+++ b/web/app/alternate/history.tpl.html
@@ -6,7 +6,7 @@
          ng-click="refresh( true )"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      Participant History for {{ name }}
+      Alternate History for {{ name }}
       <span ng-if="isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
@@ -14,7 +14,7 @@
     <cn-loading ng-if="isLoading"></cn-loading>
     <div class="spacer" ng-if="!isLoading">
       <p class="text-info" style="margin-top: 1em;">
-        Participant history shows all events and operations related to a participant listing them from most
+        Alternate history shows all events and operations related to an alternate listing them from most
         to least recent.  You may filter which categories to display by using the buttons below.
       </p>
       <div class="btn-group btn-group-justified">
@@ -65,6 +65,6 @@
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
     <button type="button" class="btn btn-default pull-left" ng-click="viewNotes()">Notes</button>
-    <button type="button" class="btn btn-primary" ng-click="viewParticipant()">View Participant</button>
+    <button type="button" class="btn btn-primary" ng-click="viewAlternate()">View Alternate</button>
   </div> 
 </div>
