--- a/web/app/cenozo/history.tpl.html
+++ b/web/app/cenozo/history.tpl.html
@@ -6,23 +6,33 @@
          ng-click="refresh( true )"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      Participant History for {{ name }}
+      {{ model.module.name.singular.ucWords() }} History for {{ name }}
       <span ng-if="isLoading">(Loading&hellip;)</span>
     </h4>
+  </div>
+  <div ng-if="5 < model.getVisibleHistoryList().length" class="form-footer text-right bg-info">
+    <button type="button"
+            class="btn btn-default pull-left"
+            ng-if="model.viewNotes"
+            ng-click="model.viewNotes()">Notes</button>
+    <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
+      View {{ model.module.name.singular.ucWords() }}
+    </button>
   </div>
   <div class="container-fluid">
     <cn-loading ng-if="isLoading"></cn-loading>
     <div class="spacer" ng-if="!isLoading">
       <p class="text-info" style="margin-top: 1em;">
-        Participant history shows all events and operations related to a participant listing them from most
-        to least recent.  You may filter which categories to display by using the buttons below.
+        {{ model.module.name.singular.ucWords() }} history shows all events and operations related to
+        {{ model.module.name.plural }} listing them from most to least recent.
+        You may filter which categories to display by using the buttons below.
       </p>
       <div class="btn-group btn-group-justified">
         <div class="btn-group">
           <button class="btn btn-info" ng-click="model.selectAllCategories()">Select All</button>
         </div>
         <div class="btn-group">
-          <button class="btn btn-info" ng-click="model.unselectAllCategories()">Unselect All</button>
+          <button class="btn btn-info" ng-click="model.unselectAllCategories()">Select None</button>
         </div>
       </div>
       <div class="btn-group btn-group-justified">
@@ -48,9 +58,7 @@
         </div>
       </div>
       <hr />
-      <div class="panel panel-default"
-           ng-repeat="history in model.historyList"
-           ng-if="model.module.historyCategoryList[history.category].active">
+      <div class="panel panel-default" ng-repeat="history in model.getVisibleHistoryList()">
         <div class="panel-heading">
           <span class="allow-select">
             <strong>{{ history.category }}</strong>: {{ history.title }}
@@ -64,7 +72,12 @@
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
-    <button type="button" class="btn btn-default pull-left" ng-click="viewNotes()">Notes</button>
-    <button type="button" class="btn btn-primary" ng-click="viewParticipant()">View Participant</button>
-  </div> 
+    <button type="button"
+            class="btn btn-default pull-left"
+            ng-if="model.viewNotes"
+            ng-click="model.viewNotes()">Notes</button>
+    <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
+      View {{ model.module.name.singular.ucWords() }}
+    </button>
+  </div>
 </div>
