--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -17,7 +17,7 @@
            tooltip-placement="left"></i>
       </div>
       {{ model.viewModel.heading }}
-      <span ng-if="!model.editEnabled">(read only)</span>
+      <span ng-if="!model.getEditEnabled()">(read only)</span>
       <span ng-if="!isComplete">(Loading&hellip;)</span>
     </h4>
   </div>
@@ -52,7 +52,7 @@
                      tooltip="{{ input.help }}">
                 {{ input.title }}
               </label>
-              <div ng-class="model.editEnabled &&
+              <div ng-class="model.getEditEnabled() &&
                              true !== input.constant && 'view' != input.constant &&
                              model.viewModel.record[input.key] != model.viewModel.backupRecord[input.key] ?
                              'col-sm-8' : 'col-sm-9'">
@@ -67,7 +67,7 @@
                     class="form-control"
                     type="text"
                     autocomplete="off"
-                    ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
+                    ng-readonly="!model.getEditEnabled() || true === input.constant || 'view' == input.constant"
                     maxlength="{{ model.metadata.columnList[input.key].max_length }}"
                     ng-required="model.metadata.columnList[input.key].required"></input>
                   <div ng-switch-when="size">
@@ -79,7 +79,7 @@
                         class="form-control"
                         type="text"
                         autocomplete="off"
-                        ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
+                        ng-readonly="!model.getEditEnabled() || true === input.constant || 'view' == input.constant"
                         maxlength="{{ model.metadata.columnList[input.key].max_length }}"
                         ng-required="model.metadata.columnList[input.key].required"></input>
                     </div>
@@ -89,7 +89,7 @@
                               ng-model="model.viewModel.formattedRecord[input.key][1]"
                               ng-change="patch( input.key )"
                               class="form-control"
-                              ng-disabled="!model.editEnabled ||
+                              ng-disabled="!model.getEditEnabled() ||
                                            true === input.constant ||
                                            'view' == input.constant"
                               ng-required="model.metadata.columnList[input.key].required">
@@ -118,7 +118,7 @@
                     placeholder="{{ null === model.viewModel.record[input.key] ? '(empty - ' : '('
                                  }}type the first few letters to search possible values)"
                     autocomplete="off"
-                    ng-readonly="!model.editEnabled"></input>
+                    ng-readonly="!model.getEditEnabled()"></input>
                   <input ng-switch-when="lookup-typeahead"
                     ng-attr-id="{{ input.key }}"
                     name="name"
@@ -134,16 +134,16 @@
                     placeholder="{{ null === model.viewModel.record[input.key] ? '(empty - ' : '('
                                  }}type the first few letters to search possible values)"
                     autocomplete="off"
-                    ng-readonly="!model.editEnabled"></input>
+                    ng-readonly="!model.getEditEnabled()"></input>
                   <input ng-switch-when="datetime"
                     ng-attr-id="{{ input.key }}"
                     name="name"
                     ng-model="model.viewModel.formattedRecord[input.key]"
                     class="form-control"
                     type="text"
-                    ng-click="model.editEnabled && true !== input.constant && 'view' != input.constant &&
+                    ng-click="model.getEditEnabled() && true !== input.constant && 'view' != input.constant &&
                               selectDatetime( input )"
-                    ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
+                    ng-readonly="!model.getEditEnabled() || true === input.constant || 'view' == input.constant"
                     onkeydown="return false"></input>
                   <input ng-switch-when="color"
                     ng-attr-id="{{ input.key }}"
@@ -158,7 +158,7 @@
                     colorpicker-close-on-select
                     autocomplete="off"
                     spellcheck="false"
-                    ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
+                    ng-readonly="!model.getEditEnabled() || true === input.constant || 'view' == input.constant"
                     maxlength="{{ model.metadata.columnList[input.key].max_length }}"
                     ng-required="model.metadata.columnList[input.key].required"
                     onkeydown="return false"></input>
@@ -171,7 +171,7 @@
                     ng-change="patch( input.key )"
                     class="form-control"
                     ng-disabled="true === input.constant || 'view' == input.constant ||
-                                 !model.editEnabled ||
+                                 !model.getEditEnabled() ||
                                  !input.enumList ||
                                  1 >= input.enumList.length"
                     ng-required="model.metadata.columnList[input.key].required"></select>
@@ -182,7 +182,7 @@
                     ng-model="model.viewModel.record[input.key]"
                     cn-change="patch( input.key )"
                     class="form-control"
-                    ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
+                    ng-readonly="!model.getEditEnabled() || true === input.constant || 'view' == input.constant"
                     ng-required="model.metadata.columnList[input.key].required"></textarea>
                   <div ng-switch-when="days" class="row">
                     <div class="col-sm-1" style="width: 14.28%">
@@ -190,7 +190,7 @@
                         <input id="sunday" name="name"
                           ng-model="model.viewModel.record.sunday"
                           ng-change="patch( 'sunday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Sunday
                       </label>
                     </div>
@@ -199,7 +199,7 @@
                         <input id="monday" name="name"
                           ng-model="model.viewModel.record.monday"
                           ng-change="patch( 'monday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Monday
                       </label>
                     </div>
@@ -208,7 +208,7 @@
                         <input id="tuesday" name="name"
                           ng-model="model.viewModel.record.tuesday"
                           ng-change="patch( 'tuesday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Tuesday
                       </label>
                     </div>
@@ -217,7 +217,7 @@
                         <input id="wednesday" name="name"
                           ng-model="model.viewModel.record.wednesday"
                           ng-change="patch( 'wednesday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Wednesday
                       </label>
                     </div>
@@ -226,7 +226,7 @@
                         <input id="thursday" name="name"
                           ng-model="model.viewModel.record.thursday"
                           ng-change="patch( 'thursday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Thursday
                       </label>
                     </div>
@@ -235,7 +235,7 @@
                         <input id="friday" name="name"
                           ng-model="model.viewModel.record.friday"
                           ng-change="patch( 'friday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Friday
                       </label>
                     </div>
@@ -244,7 +244,7 @@
                         <input id="saturday" name="name"
                           ng-model="model.viewModel.record.saturday"
                           ng-change="patch( 'saturday' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> Saturday
                       </label>
                     </div>
@@ -255,7 +255,7 @@
                         <input id="january" name="name"
                           ng-model="model.viewModel.record.january"
                           ng-change="patch( 'january' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> January
                       </label>
                     </div>
@@ -264,7 +264,7 @@
                         <input id="february" name="name"
                           ng-model="model.viewModel.record.february"
                           ng-change="patch( 'february' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> February
                       </label>
                     </div>
@@ -273,7 +273,7 @@
                         <input id="march" name="name"
                           ng-model="model.viewModel.record.march"
                           ng-change="patch( 'march' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> March
                       </label>
                     </div>
@@ -282,7 +282,7 @@
                         <input id="april" name="name"
                           ng-model="model.viewModel.record.april"
                           ng-change="patch( 'april' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> April
                       </label>
                     </div>
@@ -291,7 +291,7 @@
                         <input id="may" name="name"
                           ng-model="model.viewModel.record.may"
                           ng-change="patch( 'may' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> May
                       </label>
                     </div>
@@ -300,7 +300,7 @@
                         <input id="june" name="name"
                           ng-model="model.viewModel.record.june"
                           ng-change="patch( 'june' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> June
                       </label>
                     </div>
@@ -311,7 +311,7 @@
                         <input id="july" name="name"
                           ng-model="model.viewModel.record.july"
                           ng-change="patch( 'july' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> July
                       </label>
                     </div>
@@ -320,7 +320,7 @@
                         <input id="august" name="name"
                           ng-model="model.viewModel.record.august"
                           ng-change="patch( 'august' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> August
                       </label>
                     </div>
@@ -337,7 +337,7 @@
                         <input id="october" name="name"
                           ng-model="model.viewModel.record.october"
                           ng-change="patch( 'october' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> October
                       </label>
                     </div>
@@ -346,7 +346,7 @@
                         <input id="november" name="name"
                           ng-model="model.viewModel.record.november"
                           ng-change="patch( 'november' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> November
                       </label>
                     </div>
@@ -355,7 +355,7 @@
                         <input id="december" name="name"
                           ng-model="model.viewModel.record.december"
                           ng-change="patch( 'december' )"
-                          ng-disabled="!model.editEnabled"
+                          ng-disabled="!model.getEditEnabled()"
                           type="checkbox"></input> December
                       </label>
                     </div>
@@ -376,7 +376,7 @@
                   </span>
                 </span>
               </div>
-              <div ng-if="model.editEnabled &&
+              <div ng-if="model.getEditEnabled() &&
                           true !== input.constant && 'view' != input.constant &&
                           model.viewModel.record[input.key] != model.viewModel.backupRecord[input.key]"
                    class="col-sm-1 col-slim">
@@ -400,7 +400,7 @@
                 ng-click="op.operation( $state, model )">{{ op.title }}</button>
       </div>
       <div class="btn-group">
-        <button ng-if="model.deleteEnabled"
+        <button ng-if="model.getDeleteEnabled()"
                 type="button"
                 class="btn btn-danger"
                 ng-disabled="isDeleting"
