--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -397,6 +397,7 @@
                 ng-disabled="op.isDisabled( $state, model )"
                 ng-class="op.classes"
                 tooltip="{{ op.help }}"
+                tooltip-placement="right"
                 ng-click="op.operation( $state, model )">{{ op.title }}</button>
       </div>
       <div class="btn-group">
