Fixing bugs in report_schedule module

--- a/web/app/report_schedule/add.tpl.html
+++ b/web/app/report_schedule/add.tpl.html
@@ -1,1 +1,2 @@
-<cn-record-add model="model"></cn-record-add>
+<cn-record-add ng-show="!loading" model="model"></cn-record-add>
+<cn-loading ng-if="loading"></cn-loading>
