--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -11,6 +11,30 @@
            ng-click="refresh(); $event.stopPropagation()"
            tooltip="Click to refresh data"
            tooltip-placement="left"></i>
+        <span class="dropdown report-dropdown">
+          <i class="glyphicon glyphicon-file glyph-hover btn-header"
+             ng-class="model.calendarModel.isReportAllowed && !model.calendarModel.isReportLoading ?
+               'btn-primary' : 'glyph-disabled'"
+             ng-if="!model.calendarModel.isLoading && !model.calendarModel.chooseMode"
+             id="reportTypeList"
+             ng-click="toggleReportTypeDropdown(); $event.stopPropagation()"
+             data-toggle="dropdown"
+             tooltip="{{ model.calendarModel.isReportAllowed
+               ? 'Click to download events as a report'
+               : 'The calendar is either empty, too large or reporting is disabled' }}"
+             tooltip-placement="left"></i>
+          <ul ng-if="model.calendarModel.isReportAllowed && !model.calendarModel.isReportLoading"
+              class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="reportTypeList">
+            <li><a ng-click="getReport( 'csv' ); $event.stopPropagation()">CSV</a></li>
+            <li ng-if="!model.calendarModel.isReportBig">
+              <a ng-click="getReport( 'xlsx' ); $event.stopPropagation()">Excel</a>
+            </li>
+            <li ng-if="!model.calendarModel.isReportBig">
+              <a ng-click="getReport( 'ods' ); $event.stopPropagation()">LibreOffice</a>
+            </li>
+          </ul>
+        </span>
         <i class="glyphicon glyph-hover btn-primary btn-header"
            ng-class="collapsed ? 'glyphicon-collapse-down' : 'glyphicon-collapse-up'"
            tooltip="Click to expand {{ model.module.name.singular }} calendar"
