--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -48,7 +48,8 @@
            ng-class="{ 'table-hover':model.getViewEnabled() || model.getChooseEnabled() }">
       <thead class="bg-info">
         <tr>
-          <td ng-repeat="column in dataArray">
+          <td ng-repeat="column in dataArray"
+              ng-if="undefined === column.isIncluded || column.isIncluded( $state, model )">
             <div class="btn-group" tooltip="{{ column.help }}">
               <button class="btn btn-narrow btn-info dropdown-toggle"
                       data-toggle="dropdown"
@@ -130,6 +131,7 @@
             ng-click="model.listModel.chooseMode ? chooseRecord( record ) : selectRecord( record )"
             ng-class="{ success:model.listModel.chooseMode && record.chosen }">
             <td ng-repeat="column in dataArray"
+                ng-if="undefined === column.isIncluded || column.isIncluded( $state, model )"
                 ng-style="column.width && {'width': column.width}"
                 ng-class="{'text-left':'left'==column.align,'text-right':'right'==column.align}">
               <span ng-bind-html="record[column.key] | cnMetaFilter:column.filter"></span>
