--- a/web/app/participant/export.tpl.html
+++ b/web/app/participant/export.tpl.html
@@ -12,7 +12,7 @@
           <span ng-if="model.confirmInProgress">working, please wait...</span>
           <span ng-if="!model.confirmInProgress">
             {{ model.participantCount ?
-               model.participantCount + ' participants selected' :
+               (model.participantCount|cnCommaInteger) + ' participants selected' :
                'no participants selected' }}
             <i class="glyphicon" ng-class="model.participantCount ? 'glyphicon-ok' : 'glyphicon-remove'"></i>
           </span>
@@ -30,14 +30,17 @@
         <div class="row vertical-spacer" ng-repeat="item in model.restrictionList">
           <hr ng-if="0 < $index && 'or' == item.logic"/>
           <div class="col-sm-2">
-            <select class="form-control" ng-model="item.logic" ng-if="0 < $index">
+            <select class="form-control"
+                    ng-model="item.logic"
+                    ng-if="0 < $index"
+                    ng-change="model.applyRestrictions()">
               <option value="and">AND</option>
               <option value="or">OR</option>
             </select>
           </div>
           <label class="col-sm-2 control-label text-right">{{ item.restriction.title }}</label>
           <div class="col-sm-2 col-slim">
-            <select class="form-control" ng-model="item.test">
+            <select class="form-control" ng-model="item.test" ng-change="model.applyRestrictions()">
               <option value="&lt;=&gt;">is</option>
               <option value="&lt;&gt;">is not</option>
               <option ng-if="'dob' == item.restriction.type || 'datetime' == item.restriction.type"
@@ -54,6 +57,7 @@
                    type="text"
                    autocomplete="off"
                    ng-model="item.value"
+                   cn-change="model.applyRestrictions()"
                    maxlength="255"></input>
             <input ng-if="'dob' == item.restriction.type || 'datetime' == item.restriction.type"
                    class="form-control"
@@ -61,9 +65,12 @@
                    ng-click="model.selectDatetime( $index )"
                    ng-model="item.formattedValue"
                    onkeydown="return false"></input>
-            <select ng-if="'boolean' == item.restriction.type || 'enum' == item.restriction.type"
+            <select ng-if="'application' == item.restriction.type ||
+                           'boolean' == item.restriction.type ||
+                           'enum' == item.restriction.type"
                     class="form-control"
                     ng-model="item.value"
+                    ng-change="model.applyRestrictions()"
                     ng-options="obj.value as obj.name for obj in item.restriction.enumList"></select>
           </div>
           <div class="col-sm-1">
@@ -75,16 +82,17 @@
         <hr />
         <div class="vertical-spacer">
           <select class="form-control"
-                  ng-disabled="model.isLoading"
+                  ng-disabled="model.isLoading.restriction"
                   ng-model="model.newRestriction"
                   ng-change="model.addRestriction( model.newRestriction )"
                   ng-options="obj.key as obj.title for obj in model.restrictionTypeList"></select>
+          <select class="form-control"
+                  ng-if="model.extendedSiteSelection"
+                  ng-disabled="model.isLoading.applicationRestriction"
+                  ng-model="model.newApplicationRestriction"
+                  ng-change="model.addApplicationRestriction( model.newApplicationRestriction )"
+                  ng-options="obj.key as obj.title for obj in model.applicationRestrictionTypeList"></select>
         </div>
-      </div>
-      <div class="form-footer text-right rounded-bottom bg-info">
-        <button type="button" class="btn btn-primary" ng-click="model.applyRestrictions()">
-          Apply Restrictions
-        </button>
       </div>
     </div>
     <div class="panel panel-default">
@@ -95,7 +103,10 @@
         <span class="pull-right">
           <span ng-if="model.confirmInProgress">working, please wait...</span>
           <span ng-if="!model.confirmInProgress">
-            {{ (model.participantCount*model.columnList.length)|cnCommaInteger }} data points total
+            {{ model.getDataPointCount() ?
+               (model.getDataPointCount()|cnCommaInteger) + ' data points total' :
+               'no data points' }}
+            <i class="glyphicon" ng-class="model.getDataPointCount() ? 'glyphicon-ok' : 'glyphicon-remove'"></i>
           </span>
         </span>
       </div>
@@ -104,16 +115,90 @@
           Add which columns are to be included in the participant export.
         </p>
         <hr />
-        <p ng-if="0 == model.columnList.length">
+        <p ng-if="0 == model.getSelectedColumnCount()">
           No columns selected.
         </p>
+        <div class="row vertical-spacer"
+             ng-repeat="item in model.columnList
+                        | cnByObjectProperty:'selected':true
+                        | orderBy:'rank'">
+          <div class="col-sm-2">
+            <select class="form-control"
+                    ng-model="item.rank"
+                    ng-change="model.moveColumn( item )"
+                    ng-options="obj.rank as obj.rank for obj in model.columnList
+                                | cnByObjectProperty:'selected':true
+                                | orderBy: 'rank'">
+            </select>
+          </div>
+          <div class="col-sm-4">
+            {{ item.table }}
+          </div>
+          <div class="col-sm-5">
+            {{ item.title }}
+          </div>
+          <div class="col-sm-1">
+            <button class="btn btn-danger pull-right" ng-click="model.removeColumn( item )">
+              <i class="glyphicon glyphicon-remove"></i>
+            </button>
+          </div>
+        </div>
         <hr />
         <div class="vertical-spacer">
           <select class="form-control"
-                  ng-disabled="model.isLoading"
-                  ng-model="model.newColumn"
-                  ng-change="model.addColumn( model.newColumn )"
-                  ng-options="obj.column as obj.title for obj in model.participantColumnList"></select>
+                  ng-disabled="model.isLoading.participant"
+                  ng-model="model.newParticipantColumn"
+                  ng-change="model.addColumn( model.newParticipantColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Participant'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
+          <select class="form-control"
+                  ng-disabled="model.isLoading.site"
+                  ng-model="model.newSiteColumn"
+                  ng-change="model.addColumn( model.newSiteColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Site'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
+          <select class="form-control"
+                  ng-disabled="model.isLoading.address"
+                  ng-model="model.newAddressColumn"
+                  ng-change="model.addColumn( model.newAddressColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Address'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
+          <select class="form-control"
+                  ng-disabled="model.isLoading.phone"
+                  ng-model="model.newPhoneColumn"
+                  ng-change="model.addColumn( model.newPhoneColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Phone'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
+          <select class="form-control"
+                  ng-disabled="model.isLoading.consent"
+                  ng-model="model.newConsentColumn"
+                  ng-change="model.addColumn( model.newConsentColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Consent'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
+          <select class="form-control"
+                  ng-disabled="model.isLoading.event"
+                  ng-model="model.newEventColumn"
+                  ng-change="model.addColumn( model.newEventColumn )"
+                  ng-options="obj.column as obj.title for obj in model.columnList
+                              | cnByObjectProperty:'table':'Event'
+                              | cnByObjectProperty:'selected':false">
+            <option>test</option>
+          </select>
         </div>
       </div>
     </div>
